[metadata]
name = aiocurl
version = 0.0.2
description = asyncio extension of PycURL
long_description = file: README.md
long_description_content_type = text/markdown
keywords = asyncio, pycurl, async, libcurl, curl
url = https://github.com/fsbs/aiocurl
project_urls =
    Bug Tracker = https://github.com/fsbs/aiocurl/issues
license = GNU AGPL v3
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
py_modules = aiocurl
python_requires = >=3.7
install_requires = pycurl >=7.43.0.4
